@@ -3,10 +3,22 @@
 #include "config.h"		/* Generated by Configure */
 
 #include <stdio.h>		/* For passing data into called script */
+
+#if defined(HAVE_CTYPE_H)
 #include <ctype.h> 
+#endif
+
+#if defined(HAVE_SYS_STAT_H)
 #include <sys/stat.h>		/* For file stating */
+#endif
+
+#if defined(HAVE_SIGNAL_H)
 #include <signal.h>		/* For signals stuff */
-#include <errno.h>
+#endif
+
+#if defined(HAVE_ERRNO_H)
+#include <errno.h>      /* Error numbers for functions */
+#endif
 
 #if defined(HAVE_STDLIB_H)
 #include <stdlib.h>	/* Standard library functions */
@@ -44,6 +56,10 @@
 
 #if defined(HAVE_SYSLOG_H)
 #include <syslog.h>
+#endif
+
+#if defined(HAVE_FCNTL)
+#include <fcntl.h>
 #endif
 
 /*
