@@ -677,7 +677,7 @@ AC_ARG_WITH( allow-file,
 			withval="/usr/adm/cgiwrap.allow"
 		fi
 		if test x$withval != xno; then
-			AC_DEFINE_UNQUOTED(CONF_ALLOWFILE, ${withval})
+			AC_DEFINE_UNQUOTED(CONF_ALLOWFILE, "${withval}")
 			AC_MSG_RESULT([enabled, file is ${withval}])
 		else
 			AC_MSG_RESULT([disabled])
@@ -696,7 +696,7 @@ AC_ARG_WITH( deny-file,
 			withval="/usr/adm/cgiwrap.deny"
 		fi
 		if test x$withval != xno; then
-			AC_DEFINE_UNQUOTED(CONF_DENYFILE, ${withval})
+			AC_DEFINE_UNQUOTED(CONF_DENYFILE, "${withval}")
 			AC_MSG_RESULT([enabled, file is ${withval}])
 		else
 			AC_MSG_RESULT([disabled])
@@ -774,7 +774,7 @@ AC_MSG_RESULT([$os_specific_msg])
 AC_HEADER_STDC
 AC_CHECK_HEADERS(limits.h stdlib.h pwd.h string.h strings.h)
 AC_CHECK_HEADERS(sys/resource.h sys/types.h sys/time.h unistd.h)
-AC_CHECK_HEADERS(syslog.h)
+AC_CHECK_HEADERS(syslog.h fcntl.h sys/stat.h signal.h ctype.h)
 
 
 AC_OUTPUT(Makefile unsup/loganalyze.pl)
